Create a very minimalistic index page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-Hello World
+<html>
+	<head>
+		<title>f3rn.net</title>
+	</head>
+	<body>
+		<center >
+			<pre style="color:green; width:800px">
+                                                        ++++''++,  
+                                                   ` ::,+''''''    
+                                                + `+`':'''''';     
+                                             ;  ':,'.''''''';      
+                                          '  +: '' ''''.''+,`      
+                                          +  '' ;':;;:;';':`       
+                                      '  .'' ;';';; ;;;''          
+                                      +   ''.:;;.;;:;;'; :         
+                                 #   ,'; .;;+ :;;#,';;;'#          
+                                 '   ,;;` ';; ;;';,:'':            
+                                 ';  `;;.`';:' ,:;;',+':           
+                           :`   `;;,  :';,':;.,'';;':              
+                           ++    ;';: .:::'``:;:'';''+`            
+                           ;':   :;;, ::;::' ;:;;;   .             
+                     '     ;':   :::;;':::',':::;;'                
+                     #     :;;+  ;;;::.`,+,:.+ `;''+,              
+                    ''.    ,;:,  '::::; ' :;:;,.                   
+                    `';     :;;;   :::`' `;::';;:                  
+                    +;;,    :::::;;::,;;; ',`:;'''                 
+             #      ;:;:'  ';:.::  . ,;::;`,  ,'++'                
+            .'      ;;;;`:  `:::,;  : ::::;,.                      
+            .''     +;::; . :::,:: .  :.::;:;'                     
+            ,;;'    ,:::::  .;::,`:,;`; ;;:;'''                    
+            ,;;;     .:;::,::::, .:::,+ ':.,';''+                  
+    :       ,:;:;`  :'::`::`. ` ;`::::.'                           
+    ,'       .:;::`     :;::,;  ' ,:,::::'`                         
+    ''        .::::`  ':::`::: ,  ,::::;;:;:                        
+    '':      .;:::: ;   .,':: +`:+`:,;;::;;;',                      
+    ;;;      `,::::;` ,::::.:',::  ' :: :;;;''#                     
+    +;;,.     :::::: ' ::,::+ ,:,:;     ``. `                       
+    ';:;,    `,::::,:: '   ' ,;,::,;,`                              
+    ':;:;`    .:::::: :;  ' `:, :::::::                             
+    ::::;     .:,:,.,:. '   ::,:::::::;,                           
+    ,:::`;   ;:::,,.,, ,  `,::::::::;:;;.                          
+    ':::::: '    ,.,,::` .:; ., ;.:;,:;;''''                        
+    `,:::`:`  .::,,,:``,::` :, + ;. ,;::,.                         
+    +;::;,:: , :::,,. : ,,,,:: .                                    
+     .:,,,,::    `. ' :,:,,:`:, .                                  
+    .::,,:,,:, ,.   + :,,.::,:::; :                                 
+    ,:,: ,:,`,;   ;  :::::,:::::;.                                 
+      `,,:,.,,:  +   `::::,:::;::;;':                              
+    ':::,, `,:: '   . ::`: :,::::;;;;'``                           
+     ,,,.`',,,``  ::, :. ; :.:`;;;;;''+                            
+        ...:,   :,::  ,. : ``` #.   `                              
+     ,::,,,;` `:,,:..:;                                            
+     ::,,,,  '``,,:::: ,;                                          
+        .`, +  :,,,,:,::.`+                                        
+           ' `,,, ;.,::::: '                                       
+          ,   :::,,, :,,::::; ,                                    
+              :::,::,:::;,:::;;:`                                  
+         `    ,:,`::::::,:.;:;;;'+`                                
+        :     `:` ::`:.:::`;;;;;''+                                
+       '       ;  ,, ; ,.;`;: .;:`                                 
+      ,         `  : `  . `,                            <span style="color:black">http://f3rn.net</span>
+		</pre>
+		</center>
+		<div>
+			<h3>Projects</h3>
+			<ul>
+				<li><a href="https://github.com/PalSzak/jvs">JVS</a> - Java Version Switcher</li>
+			</ul>
+		</div>
+		
+	</body>
+</html>
